# rpnpad

./: Cargo.toml  README.md
.claude/commands/: tr-discover.md
.github/workflows/: release.yml
.taproot/: backlog.md  settings.yaml
.taproot/docs/: hints-architecture.md
.taproot/sessions/_sessions/: discovery-status.md
aur/: .SRCINFO  PKGBUILD  update-aur.sh
snap/: snapcraft.yaml
src/config/: config.rs
src/engine/: mod.rs  notation.rs  ops.rs  stack.rs  units.rs  value.rs
src/input/: action.rs  handler.rs  mode.rs  parser.rs
src/tui/: app.rs  layout.rs
src/tui/widgets/: hints_pane.rs  input_line.rs  mode_bar.rs  stack_pane.rs
taproot/: CONVENTIONS.md  OVERVIEW.md  plan.md
taproot/configuration/: intent.md
taproot/configuration/configure-defaults/: usecase.md
taproot/configuration/configure-settings-chord/: usecase.md
taproot/discoverability/: intent.md
taproot/discoverability/browse-hints-pane/: usecase.md
taproot/discoverability/direct-common-functions/: usecase.md
taproot/discoverability/execute-chord-operation/: usecase.md
taproot/discoverability/show-last-command/: usecase.md
taproot/distribution/: intent.md
taproot/distribution/cargo-dist-release-pipeline/: usecase.md
taproot/distribution/install-via-aur/: usecase.md
taproot/distribution/install-via-curl/: usecase.md
taproot/distribution/install-via-homebrew/: usecase.md
taproot/distribution/install-via-snap/: usecase.md
taproot/distribution/project-readme/: usecase.md
taproot/global-truths/: conventions_intent.md  glossary_intent.md  guarantees_behaviour.md  units_behaviour.md
taproot/mathematical-operations/: intent.md
taproot/mathematical-operations/apply-operation/: usecase.md
taproot/physical-quantities/: intent.md
taproot/stack-management/: intent.md
taproot/state-and-memory/: intent.md
(+43 files in other folders)
