[package]
name = "rpnpad"
version = "0.2.7"
edition = "2021"
description = "An HP48-style RPN calculator for the terminal"
license = "MIT"
repository = "https://github.com/imix/rpnpad"
homepage = "https://github.com/imix/rpnpad"

# cargo-dist release configuration
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
tap = "imix/homebrew-tap"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
publish-jobs = ["homebrew"]
allow-dirty = ["ci"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
dashu = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
arboard = "3"
toml = "~0.8"
signal-hook = "~0.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
